public/css/style.scss
/* ... */
.form {

	input[type="text"], input[type="password"], input[type="tel"], textarea {

		width:100%;
		background-color:transparent;
		border:none;
		border-bottom: 1px solid white;
		color:white;
		border-radius: 0;

		&:focus {

			outline:none;


		}


	}

	label {
		// margin-top: 10px;
		color:white;
		text-transform: uppercase;
		font-size: .8rem;

	}

}

.vendor-login-form {

	@extend .form;

	float:right;
	width:25%;

	.sign-in-button {

		text-align: right;

	}

	input[type="submit"] {

		margin-top: 60px;
		border-radius: 0;


	}

	@include breakpoint(medium) {

		width:100%;
		float:none;
		margin: 50px 0;

		.sign-in-button {

			text-align: left;

		}

	}


}

.quote-form-container {

	float:right;
	position: relative;
	width:33%;

	@include breakpoint(medium) {

		width:100%;
		margin:50px 0;

	}

}

.quote-form {

	@extend .form;

	margin:0 auto;
	// padding-top: 30px;
	width:100%;

	textarea {
		margin-top: 1rem;
		height:5rem;

		@include breakpoint(tablet) {

			height:2.5rem;

		}

	}

	p {

		margin-bottom: 15px;

	} 

}

.quote-form-actions {
	width:100%;
	margin-top: 50px;
	position: relative;

	@include breakpoint(tablet) {

		margin-top: 25px;

	}

}

.quote-form-action {

	width:50%;
	@include box-sizing(border-box);

	&.cancel {

		float:left;
		background-color: transparent;
		border:1px solid white;
		color:white;

	}

	&.request {

		float:right;

	}

}

.team-container {

	position: relative;
	width:95%;
	height:auto;
	margin:0 auto;

	img {

		display: block;
		width:100%;

	}

	@include breakpoint(tablet) {

		width:100%;

	}

	@include breakpoint(medium) {

		width:100%;

	}

}

.team-hover-trigger-container {

	position: absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
	overflow: auto;

}

.team-hover-trigger {

	float:left;
	height:100%;
	width:8.333%;
	@include box-sizing(border-box);
	// border-right: 2px solid green;

	&:first-child {

		width:13%;

	}

	&:nth-child(2) {

		width:7%;

	}

	&:nth-child(3) {

		width:7%;

	}

	&:nth-child(4) {

		width:7%;

	}

	&:nth-child(7) {

		width:6%;

	}

	&:nth-child(8) {

		width:7%;

	}

}

.nav-request-quote {

	float:right;
	position: relative;
	overflow: hidden;

	a {

		overflow: hidden;
		position: relative;

	}

	li {

		text-transform: uppercase;
		font-size: .95rem;
		position: relative;
		color:$dark;
		font-weight: normal;
		@include transition(transform .3s);
		
		&:before {

			top:100%;
			position: absolute;
			content: attr(data-hover);
			text-transform: uppercase;
			color:$dark;
			font-size: .95rem;
			@include transition(transform .3s);

			@include breakpoint(large) {

				font-size: .9rem;

			}

		}

		&:hover {

			@include transform(translate(0, -100%));
			color:$light;

			&:before {

				@include transform(translate(0, 0));

			}

		}

		@include breakpoint(large) {

			font-size: .9rem;

		}

	}

	@include breakpoint(medium) {

		display: none;

	}
	
}

.nav-page-elements {

	float:right;

	@include breakpoint(medium) {

		display: none;

	}

}

.hamburger {

	cursor:pointer;
	position: relative;

	.patty {

		width:100%;
		height:2px;
		@include transition(all .15s ease);

		&:first-child {
			position: absolute;
			top:0;
			left:0;
		}

		&:nth-child(2) {
			@include center;
			top:49.25%;
		}

		&:last-child {
			position: absolute;
			bottom: 0;
			left: 0;
		}

	}	

}

.mobile-hamburger {

	position: fixed;
	top:20px;
	right:20px;
	width:30px;
	height:20px;
	z-index: 10;
	cursor: pointer;

	.patty {

		background-color: $light;

	}

	&.open {

		.patty {

			&:first-child {

				@include transform(translate(0, 9px) rotate(45deg));
				background-color:black;

			}

			&:nth-child(2) {

				opacity: 0;

			}

			&:last-child {

				@include transform(translate(0, -9px) rotate(-45deg));
				background-color:black;

			}

		}

	}

	@include stretchpoint(medium) {

		display: none;

	}

}

.nav-hamburger {

	.patty {

		background-color: black;

	}

}

.capabilities-title {

	text-transform: uppercase;

	.hamburger {

		float:left;
		width:16px;
		height:.9rem;

	}

	h3 {

		margin-left: 10px;
		float:left;
		white-space: nowrap;
		font-size: .9em;

	}

}

.pacific-overview-container {

	@extend .photo-container;

}

.pacific-title {

	@extend .capabilities-title;

	color:lighten($dark, 35%);

}


.pacific-photo-caption {

	display: inline-block;

}



.credits {

	text-transform: uppercase;
	font-size: .6rem;
	position: absolute;
	top:115%;
	right:0;

	// margin-top: 10px;

}

